Items list fix img align

--- a/src/_common/items-list/items-list.scss
+++ b/src/_common/items-list/items-list.scss
@@ -214,9 +214,8 @@ $item-list-col-shrink: 3 !default;
 		}
 
 		a {
-			flex-grow: 1;
-			display: flex;
-			align-self: stretch;
+			width: 100%;
+			// display: flex;
 		}
 	}
 
